--- a/src/common/css/css.css
+++ b/src/common/css/css.css
@@ -1,13 +1,13 @@
 /* CSS Document */
-body,html{ height:100%; font-size:12px; color:#333; line-height:18px;  font-family:STHeiTi,Helvetica,"MICROSOFT YAHEI", sans-serif;}
+body,html{ height:100%; font-size:24px; color:#333; line-height:36px;  font-family:STHeiTi,Helvetica,"MICROSOFT YAHEI", sans-serif;}
 body,form,iframe,ul,li,ol,dl,dd,dt,h1,h2,h3,h4,p{margin:0; padding:0; list-style:none;}
 *{ box-sizing:border-box; -webkit-box-sizing:border-box;}
 a{ text-decoration:none; color:#333; cursor:pointer; -webkit-tap-highlight-color:rgba(0,0,0,0); tap-highlight:rgba(0,0,0,0);}
 
 .clearfix:after{content:""; clear:both; display:block;}  .fl{ float:left;} .fr{ float:right;}
 .arrow {position:relative;}
-.arrow:before {width:10px; height: 10px; content: ""; display: block;  border-right: 2px solid #ddd; border-top: 2px solid #ddd;  position: absolute;
-  right: 12px; top: 50%;  margin-top:-5px; transform: rotate(45deg); -webkit-transform:rotate(45deg);  }
+.arrow:before { width:20px;height:20px; display:block;  border-right: 4px solid #ddd; border-top: 4px solid #ddd;  position: absolute;
+  right: 24px; top: 50%;  margin-top:-5px; transform: rotate(45deg); -webkit-transform:rotate(45deg);  }
 
 .ellipsis{overflow:hidden; text-overflow:ellipsis; white-space:nowrap; }
 .ellipsis2{ overflow : hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp:2; -webkit-box-orient: vertical;}
